crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__codegen_v_if_template_fragment_wraps_interpolation_in_text_vnode.snap
---
source: crates/vize_atelier_core/src/codegen.rs
assertion_line: 457
expression: output.as_str()
---
const { toDisplayString: _toDisplayString, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, createTextVNode: _createTextVNode } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("p", null, [
    (ready)
      ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
        _createTextVNode(_toDisplayString(count), 1 /* TEXT */)
      ], 64 /* STABLE_FRAGMENT */))
      : _createCommentVNode("v-if", true),
    (pending)
      ? (_openBlock(), _createElementBlock("span", { key: 1 }, "updating"))
      : _createCommentVNode("v-if", true)
  ]))
}
