crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__codegen_v_model_on_component.snap
---
source: crates/vize_atelier_core/src/codegen.rs
expression: output.as_str()
---
const { resolveComponent: _resolveComponent, openBlock: _openBlock, createBlock: _createBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MyComponent = _resolveComponent("MyComponent")
  
  return (_openBlock(), _createBlock(_component_MyComponent, {
    modelValue: msg,
    "onUpdate:modelValue": $event => ((msg) = $event)
  }, null, 8 /* PROPS */, ["modelValue", "onUpdate:modelValue"]))
}
