crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__codegen_v_model_with_other_props.snap
---
source: crates/vize_atelier_core/src/codegen.rs
expression: output.as_str()
---
const { resolveComponent: _resolveComponent, openBlock: _openBlock, createBlock: _createBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_MonacoEditor = _resolveComponent("MonacoEditor")
  
  return (_openBlock(), _createBlock(_component_MonacoEditor, {
    language: editorLanguage,
    modelValue: source,
    "onUpdate:modelValue": $event => ((source) = $event)
  }, null, 8 /* PROPS */, ["language", "modelValue", "onUpdate:modelValue"]))
}
