crates/vize_atelier_core/src/snapshots/vize_atelier_core__codegen__tests__root_only_directive_comment_compiles_to_null.snap
---
source: crates/vize_atelier_core/src/codegen.rs
expression: output.as_str()
---

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return null
}
